--- a/sprint-1/18-thymeleaf-part-2/demo_sakila_website_final/src/main/resources/application.properties
+++ b/sprint-1/18-thymeleaf-part-2/demo_sakila_website_final/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=demo_sakila_website
+server.error.whitelabel.enabled=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=root
