--- a/sprint-3/06-rest-api/exercise_rest-api/src/main/resources/application.properties
+++ b/sprint-3/06-rest-api/exercise_rest-api/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.web.resources.add-mappings=false
+
 spring.application.name=demo_sakila_website
 server.error.whitelabel.enabled=false
 
