--- a/sprint-3/08-api-review/review_northwind-api/src/main/resources/application.properties
+++ b/sprint-3/08-api-review/review_northwind-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo_northwind_api
+spring.application.name=northwind-api
 server.error.whitelabel.enabled=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/northwind
