--- a/sprint-3/14-react-routing/demo_thymeleaf-paging_comparison/src/main/resources/application.properties
+++ b/sprint-3/14-react-routing/demo_thymeleaf-paging_comparison/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Server.port=9090
+Server.port=9090
