--- a/sprint-3/15-sharing-data/new-react/package.json
+++ b/sprint-3/15-sharing-data/new-react/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "demo-sakila-routing",
+  "name": "new-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 4000 --open",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
-    "bootswatch": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
